Fix border image overflow on mobile devices

--- a/css/creator-style.css
+++ b/css/creator-style.css
@@ -301,6 +301,7 @@ textarea {
 
 #file-drop-zone-p {
     margin: 0;
+    aspect-ratio: 1;
 }
 
 #fileUpload {
