--- a/css/valentine-style.css
+++ b/css/valentine-style.css
@@ -135,7 +135,7 @@
     overflow: auto;
     background-color: var(--letter-bg-color);
     border: 1px solid black;
-    padding: 1% 3%;
+    padding: 25px 25px;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
